# autocoder

./: AGENTS.md  README.md  address-pr-review.sh  fix-github-issue.sh  pyproject.toml
amp/: address-pr-comments-with-amp  fix-issue-with-amp
autocoder_utils/: __init__.py  address_pr_comments.py  change_tracker.py  cli.py  gh_pr_helper.py  issue_workflow.py
change-tracker/: README.md  generate-changelog.py
claude/: address-pr-comments-with-claude  fix-issue-with-claude
codex/: address-pr-comments-with-codex  fix-issue-with-codex
gh-pr-helper/: README.md  gh-pr-helper
kilocode/: address-pr-comments-with-kilocode  fix-issue-with-kilocode
tests/: __init__.py  test_gh_pr_helper.py  test_issue_workflow_branch_logic.py
