[project]
name = "Nicks_Autocoder"
version = "0.1.0"
description = "CLI helpers for AI-assisted GitHub workflows"
readme = "README.md"
requires-python = ">=3.12"
dependencies = []

[dependency-groups]
dev = [
    "pytest>=8.0.0",
]

[project.scripts]
address-pr-comments-with-amp = "autocoder_utils.cli:address_pr_comments_with_amp"
address-pr-comments-with-claude = "autocoder_utils.cli:address_pr_comments_with_claude"
address-pr-comments-with-codex = "autocoder_utils.cli:address_pr_comments_with_codex"
address-pr-comments-with-kilocode = "autocoder_utils.cli:address_pr_comments_with_kilocode"
address-pr-comments-with-mistral-vibe = "autocoder_utils.cli:address_pr_comments_with_mistral_vibe"
fix-issue-with-amp = "autocoder_utils.cli:fix_issue_with_amp"
fix-issue-with-claude = "autocoder_utils.cli:fix_issue_with_claude"
fix-issue-with-codex = "autocoder_utils.cli:fix_issue_with_codex"
fix-issue-with-kilocode = "autocoder_utils.cli:fix_issue_with_kilocode"
fix-issue-with-mistral-vibe = "autocoder_utils.cli:fix_issue_with_mistral_vibe"
generate-changelog = "autocoder_utils.cli:generate_changelog"
gh-pr-helper = "autocoder_utils.cli:gh_pr_helper"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["autocoder_utils"]

[tool.hatch.build.targets.sdist]
include = ["autocoder_utils", "README.md"]
